--- a/Reports/pom.xml
+++ b/Reports/pom.xml
@@ -51,6 +51,11 @@
 			<version>5.1.21</version>
 		</dependency>
 		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
 			<version>1.8</version>
@@ -175,8 +180,8 @@
 									</includes> 	
 								</resource>
 								<resource>
-									<targetPath>${basedir}/target/Reports/WEB-INF/resources/reports</targetPath>
-									<directory>src/main/resources/reports</directory>
+									<targetPath>${basedir}/target/Reports/WEB-INF/resources/reports/bsim</targetPath>
+									<directory>src/main/resources/reports/bsim</directory>
 									<includes>
 										<include>*.json</include>
 									</includes>	
