--- a/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
@@ -11,7 +11,8 @@
                         <ul>
                             <li id="partner_tab"><a href="#" onclick="return false">Partner</a></li>
                             <li id="mfsBiller_tab"><a href="#" onclick="return false">Billers</a></li>
-                            <li id="agent_tab" ><a href="#" onclick="return false">Agent</a></li>  
+                            <!-- <li id="agent_tab" ><a href="#" onclick="return false">Agent</a></li> -->
+                            <li id="agentsp_tab" ><a href="#" onclick="return false">Agent</a></li>  
                             <li id="teller_tab" ><a href="#" onclick="return false">BankTeller</a></li>
                             <li id="fundingForAgent_tab"><a href="#" onclick="return false">Approve Funding</a></li> 
                         </ul>
@@ -115,7 +116,7 @@
                                 				itemName == 'schedulerConfig' || itemName == 'fundDefinitions' || itemName == 'appUploader' ||
                                 					itemName == 'actorChannelMapping' || itemName == 'permissions' || itemName == 'promos' )
                             tab_holder.setCurrent('settings');
-                        else if(itemName == 'partner' || itemName == 'mfsBiller' || itemName == 'agent' || itemName == 'teller' || itemName == 'fundingForAgent')
+                        else if(itemName == 'partner' || itemName == 'mfsBiller' || itemName == 'agent'|| itemName == 'agentsp' || itemName == 'teller' || itemName == 'fundingForAgent')
                             tab_holder.setCurrent('partners');
                         else if(itemName == 'chargeTransactions' || itemName == 'adjustments' )
                             tab_holder.setCurrent('transactionsMain');
