Provided SubscriberUpgrade functionality

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -66,6 +66,8 @@
 <!-- Subscriber Tab -->
 <script type="text/javascript" src="<c:url value="/js/page/subscriber.js"/>">
 </script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberUpgradeApproveRejectWindow.js" />">
+</script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberForm.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberDetails.js"/>">
