--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -909,3 +909,22 @@
 
 <script type="text/javascript" src="<c:url value="/js/widget/PartnerTransfer.js" />">
 </script>
+
+
+<!-- Product Referral related files -->
+ <script type="text/javascript" src="<c:url value="/js/page/productReferral.js"/>">
+</script>
+ <script type="text/javascript" src="<c:url value="/js/widget/ProductReferralGrid.js"/>">
+</script>
+ <%-- <script type="text/javascript" src="<c:url value="/js/widget/ProductReferralEditForm.js"/>">
+</script>  --%>
+<script type="text/javascript" src="<c:url value="/js/widget/ProductReferralSearchForm.js"/>">
+</script>
+<script type="text/javascript" src="<c:url value="/js/widget/ProductReferralViewForm.js"/>">
+</script>
+<script type="text/javascript" src="<c:url value="/js/widget/ProductReferralDetails.js"/>">
+</script>
+ <%-- <script type="text/javascript" src="<c:url value="/js/widget/ProductReferralAddForm.js"/>">
+</script>   --%>
+ 
+ 
