--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -585,6 +585,11 @@
 <script type="text/javascript" src="<c:url value="/js/widget/ServicePartnerFormspEdit.js"/>"></script>
 <script type="text/javascript" src="<c:url value="/js/widget/ServicePartnerFormspView.js"/>"></script>
 
+<script type="text/javascript" src="<c:url value="/js/widget/AgentClosingInquiry.js" />">
+</script>
+<script type="text/javascript" src="<c:url value="/js/widget/AgentClosing.js" />">
+</script>
+
 <%-- <script type="text/javascript" src="<c:url value="/js/page/Partnertransaction.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/PartnerTransactionsGrid.js"/>">
