--- a/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
@@ -48,10 +48,8 @@
                             <li id="actorChannelMapping_tab"><a href="#" onclick="return false">Actor Channel Mapping</a></li>
                         	<li id="appUploader_tab"><a href="#" onclick="return false">AppUploader</a></li>
                         	<li id="permissions_tab"><a href="#" onclick="return false">Roles & Permissions</a></li>	
-                        	<li id="promos_tab"><a href="#" onclick="return false">Promos</a></li>
-                        	<li id="productReferral_tab"><a href="#" onclick="return false">Product Referral</a></li> 
-                        	
-                        	
+                        	<li id="promos_tab"><a href="#" onclick="return false">Promos</a></li>                        	
+                        	<li id="pReferral_tab"><a href="#" onclick="return false">Product Referral</a></li>
 					</ul>
                         </td></tr></table>
         </li>
@@ -117,7 +115,7 @@
                                 		itemName == 'transactionCharge' || itemName == 'pocketTemplate' || itemName == 'distributionTemplate' ||
                                 			itemName == 'pocketTemplateConfig' || itemName == 'systemParameters' || itemName == 'integrations' || 
                                 				itemName == 'schedulerConfig' || itemName == 'fundDefinitions' || itemName == 'appUploader' ||
-                                					itemName == 'actorChannelMapping' || itemName == 'permissions' || itemName == 'promos' || itemName == 'productReferral')
+                                					itemName == 'actorChannelMapping' || itemName == 'permissions' || itemName == 'promos' || itemName == 'pReferral' )
                             tab_holder.setCurrent('settings');
                         else if(itemName == 'partner' || itemName == 'mfsBiller' || itemName == 'agent'|| itemName == 'agentsp' || itemName == 'teller' || itemName == 'fundingForAgent')
                             tab_holder.setCurrent('partners');
