Modifications for Agent Closure - Maker Checker Process flow.

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -586,6 +586,8 @@
 <script type="text/javascript" src="<c:url value="/js/widget/ServicePartnerFormspEdit.js"/>"></script>
 <script type="text/javascript" src="<c:url value="/js/widget/ServicePartnerFormspView.js"/>"></script>
 
+<script type="text/javascript" src="<c:url value="/js/widget/ApproveRejectWindowCloseAccount.js"/>"></script>
+
 <script type="text/javascript" src="<c:url value="/js/widget/AgentClosingInquiry.js" />">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/AgentClosing.js" />">
