Provided new form for lakupandi subscriber edit and view related to SMP-293

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -71,6 +71,8 @@
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberForm.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberFormSPView.js"/>"></script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberLakupandaiFormView.js"/>"></script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberLakupandaiViewForm.js"/>"></script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberDetails.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberSearchForm.js"/>">
