Modified for Capitalization of interest and commission.

--- a/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/menu.jspf
@@ -68,7 +68,7 @@
                         </ul>
                         </td></tr></table>
         </li>   
-        <li id="bulkTransfer_tab"><a href="#" onclick="return false">Bulk Payment</a></li>                        
+        <li id="bulkTransfer_tab"><a href="#" onclick="return false">Bulk Transfer</a></li>                        
     </ul>
 </div>
 
