--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -683,6 +683,8 @@
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/BulkTransferReverseTxnsGrid.js"/>">
 </script>
+<script type="text/javascript" src="<c:url value="/js/widget/ConfirmTransferFile.js"/>">
+</script>
 
 <!--OLAP  -->
 <script type="text/javascript" src="<c:url value="/js/page/OLAP.js"/>">
