--- a/Reports/pom.xml
+++ b/Reports/pom.xml
@@ -141,7 +141,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core-tiger</artifactId>
-			<version>2.0.7.RELEASE/version>
+			<version>2.0.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
