--- a/Reports/pom.xml
+++ b/Reports/pom.xml
@@ -153,6 +153,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>3.2.9.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-ses</artifactId>
+		    <version>1.11.7</version>
+		</dependency>
   	</dependencies>  	
   	
   	<build>
