Modification done for SMP-548 Add Bank Account Pocket for KYC Subscriber (for Checker)

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -74,6 +74,8 @@
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberAddPocketWindow.js" />">
 </script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberAddPocketApproveRejectWindow.js" />">
+</script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberForm.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberFormSPView.js"/>"></script>
