[SMP-558] Subscriber Edit
1. update subscriber upgrade kyc (add flow for active request same man
can’t perform another checker maker process)
2. source for subscriber edit checker maker
3. script for SMP-558 checker maker part.

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -121,6 +121,10 @@
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/SubscriberClosing.js" />">
 </script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberEditMakerForm.js" />">
+</script>
+<script type="text/javascript" src="<c:url value="/js/widget/SubscriberEditCheckerWindow.js" />">
+</script>
 
 <!-- Pocket widgets -->
 <script type="text/javascript" src="<c:url value="/js/widget/PocketAddForm.js"/>">
