SMP 577 578 Reset Mpin Checker Maker

--- a/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
+++ b/Web/AdminApplication/web/WEB-INF/jspf/footer.jspf
@@ -97,6 +97,8 @@
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/ApproveRejectSubEmoneyPocketSuspendRequestWindow.js"/>">
 </script>
+<script type="text/javascript" src="<c:url value="/js/widget/ApproveRejectResetMPinWindow.js"/>">
+</script>
 <script type="text/javascript" src="<c:url value="/js/widget/CreateSubEmoneyPocketRetireRequestWindow.js"/>">
 </script>
 <script type="text/javascript" src="<c:url value="/js/widget/ApproveRejectSubEmoneyPocketRetireRequestWindow.js"/>">
